fix mobile layout issues in playlist

--- a/src/App.css
+++ b/src/App.css
@@ -26,14 +26,7 @@
  }
 
 
- scrollbar-color: #888 #212020;
-
- scrollbar-track-color: #212020;
-
- scrollbar-thumb-color: #888;
-
- scrollbar-thumb-color: #555;
-
+ /* scrollbar-color: #888 #212020 */
  @keyframes spin {
    0% {
      transform: rotate(0deg);
@@ -61,7 +54,7 @@
    gap: 1rem;
    background-color: #000;
    padding: 1.5rem 1rem;
-   height: 100vh;
+   min-height: 100vh;
    overflow: hidden;
  }
 
