--- a/src/components/PlayList/playlist.module.css
+++ b/src/components/PlayList/playlist.module.css
@@ -78,6 +78,10 @@
         flex-basis: 100%;
     }
 
+    .playlist-songs-container {
+        padding-bottom: 3rem;
+    }
+
 
     .playlist {
         position: absolute;
@@ -158,6 +162,6 @@
     height: 2.8rem;
     background: #888;
     animation: shimmer 1s infinite;
-    width: 80%;
+    width: 100%;
     opacity: 0.4;
 }
