--- a/src/components/SideBar/sidebar.module.css
+++ b/src/components/SideBar/sidebar.module.css
@@ -45,6 +45,8 @@
 @media only screen and (max-width:480px) {
     .sidebar {
         flex-basis: auto;
+        /* position: sticky;
+        top: 0 */
     }
 
     .sidebar-items-container {
